# rust_mysql_example

./: Cargo.toml  README.md
migrations/: 0001_characters.sql
src/: commands.rs  main.rs
